fix delete error on Theme